# spanish-grid-research-agent

./: .env.example  .gitignore  README.md  agent.py  agent_pydantic.py  pyproject.toml  streamlit_app.py
examples/: questions.md
prompts/: system.md
