[project]
name = "spanish-grid-research-agent"
version = "0.1.0"
description = "Agentic research assistant for the Spanish electricity market — Claude + MCP."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Raúl Reguillo", email = "raul.reguillo@gmail.com" }]
dependencies = [
    "anthropic>=0.40.0",
    "mcp>=1.2.0",
    "python-dotenv>=1.0.0",
    "pydantic-ai-slim[anthropic,mcp]>=1.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0"]
ui = ["streamlit>=1.58.0"]

[project.scripts]
spanish-grid-agent = "agent:main"
spanish-grid-agent-pydantic = "agent_pydantic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["agent.py", "agent_pydantic.py", "prompts"]

[tool.ruff]
line-length = 100
target-version = "py310"
